`gpg --fetch-keys` fails because of missing keyserver
Testing, NormalPublic

Assigned To
None
Authored By
m.eik
Jun 17 2025, 4:03 PM
Subscribers

Description

if no keyserver is configured, gpg --fetch-keys fails with an error:

$ gpg --fetch-keys https://path/to/key.gpg
gpg: requesting key from 'https://path/to/key.gpg'
gpg: WARNING: unable to fetch URI https://path/to/key.gpg: No keyserver available
gpg: key fetch failed: No keyserver available