dirmngr: Do not require a keyserver for KS_FETCH.

* dirmngr/server.c (cmd_ks_fetch): Remove check for a keyserver.
--
GnuPG-bug-id: 7693